moving index page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Cats&News
         </title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="site/css/style.css">
     </head>
     <body>
         
@@ -21,7 +21,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">F.L.Ine</a> 7/8/22
                 </div>
-                <img src="./images/erik-jan-leusink-gr1UYHBFkD4-unsplash.jpg" alt="Paw"> 
+                <img src="site/images/erik-jan-leusink-gr1UYHBFkD4-unsplash.jpg" alt="Paw"> 
                 <p> Мягкие и нежные. Бытует мнение, что депрессия лечится не только таблетками. Это подтвердили 
                     76% участников опроса, проведенного исследовательским центром <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/pets-and-mental-health">Mental Health Foundation</a>.</p>
 
@@ -35,7 +35,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">P.M. Kittens</a> 3/3/22
                 </div>
-                <img src="./images/Larry_Chief_Mouser_(cropped).jpeg" alt="Chief Mouser"> 
+                <img src="site/images/Larry_Chief_Mouser_(cropped).jpeg" alt="Chief Mouser"> 
                 <p>Знакомьтесь: кот Ларри, занимает должность главного мышелова на Даунинг-стрит, 10, 
                     в резиденции премьер-министра Великобритании с 2011 года. </a>.</p>
 
@@ -48,7 +48,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Pope of Mew</a> 6/6/22
                 </div>
-                <img src="./images/cat-2_1614774535-640x320.jpeg"> 
+                <img src="site/images/cat-2_1614774535-640x320.jpeg"> 
                 <p> В 1234 году папа римский Григорий IX объявил войну кошкам. Спойлер: ничего из этого хорошего не вышло.</p>
 
                     
@@ -60,7 +60,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Kitty M.D.</a> 7/7/22
                 </div>
-                <img src="./images/1588839268_2ba35e460d07b8d1fca85b2d0cf190f6.jpeg"> 
+                <img src="site/images/1588839268_2ba35e460d07b8d1fca85b2d0cf190f6.jpeg"> 
                 <p> Фелинологи объясняют желание котов спать на человеке поиском тепла. ОДнако замечено, 
                     что если кошка постоянно укладывается на одну и ту же часть тела, то следует обратить на это внимание.
                 </p>
@@ -74,7 +74,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Ling.O.Puss</a> 8/8/22
                 </div>
-                <img src="./images/cat-playing-with-little-gerbil-mouse-on-thetable-507209918-5aa963921f4e1300371a3099.jpeg"> 
+                <img src="site/images/cat-playing-with-little-gerbil-mouse-on-thetable-507209918-5aa963921f4e1300371a3099.jpeg"> 
                 <p> Грызуны «общаются» между собой, посредством звуковых сигналов в диапазоне около 40 кГц. А в таких «разговорах» коты отлично разбираются. 
                     Эта сверхспособность помогает им узнавать, когда мыши выйдут из нор. </p>
 
