--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+        <meta charset="utf-8"/>
         <title>
             Cats&News
         </title>
@@ -48,7 +49,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Pope of Mew</a> 6/6/22
                 </div>
-                <img src="site/images/cat-2_1614774535-640x320.jpeg"> 
+                <img src="site/images/cat-2_1614774535-640x320.jpeg" alt="Battle"> 
                 <p> В 1234 году папа римский Григорий IX объявил войну кошкам. Спойлер: ничего из этого хорошего не вышло.</p>
 
                     
@@ -60,8 +61,8 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Kitty M.D.</a> 7/7/22
                 </div>
-                <img src="site/images/1588839268_2ba35e460d07b8d1fca85b2d0cf190f6.jpeg"> 
-                <p> Фелинологи объясняют желание котов спать на человеке поиском тепла. ОДнако замечено, 
+                <img src="site/images/1588839268_2ba35e460d07b8d1fca85b2d0cf190f6.jpeg" alt="Sleeping on a human"> 
+                <p> Фелинологи объясняют желание котов спать на человеке поиском тепла. Однако замечено, 
                     что если кошка постоянно укладывается на одну и ту же часть тела, то следует обратить на это внимание.
                 </p>
 
@@ -74,7 +75,7 @@
                 <div class="article-meta">
                     Опубликовал <a href="#">Ling.O.Puss</a> 8/8/22
                 </div>
-                <img src="site/images/cat-playing-with-little-gerbil-mouse-on-thetable-507209918-5aa963921f4e1300371a3099.jpeg"> 
+                <img src="site/images/cat-playing-with-little-gerbil-mouse-on-thetable-507209918-5aa963921f4e1300371a3099.jpeg" alt="Mouse Language"> 
                 <p> Грызуны «общаются» между собой, посредством звуковых сигналов в диапазоне около 40 кГц. А в таких «разговорах» коты отлично разбираются. 
                     Эта сверхспособность помогает им узнавать, когда мыши выйдут из нор. </p>
 
