--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <img src="site/images/Larry_Chief_Mouser_(cropped).jpeg" alt="Chief Mouser"> 
                 <p>Знакомьтесь: кот Ларри, занимает должность главного мышелова на Даунинг-стрит, 10, 
-                    в резиденции премьер-министра Великобритании с 2011 года. </a>.</p>
+                    в резиденции премьер-министра Великобритании с 2011 года. </p>
 
                     
             </article>
